# streamgrep

./: .gitignore  README.md  pyproject.toml
src/streamgrep/: __main__.py  chunking.py  cli.py  embeddings.py  engine.py  files.py  types.py
tests/: test_streamgrep.py
