[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamgrep"
version = "0.1.0"
description = "Streaming hybrid fulltext and vector search without a preprocessing step."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.optional-dependencies]
semantic = [
  "sentence-transformers>=3.0.0,<4.0.0",
]

[project.scripts]
streamgrep = "streamgrep.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
